libstream-perl (0.8.0) UNRELEASED; urgency=low

  * lazy style of stream definitions in catalog
  * Stream::Pumper and Stream::Pumper::Common
  * /usr/share/stream in catalog path

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 21 Jun 2010 20:38:39 +0400

libstream-perl (0.7.2) unstable; urgency=low

  * Stream::File - truncate on errors
  * Stream::File::In - don't read incomplete lines
  * 'use parent' instead of 'use base' in all modules
  * perlcritic conformance (mostly)
  * Stream::Cursor::Integer removed, Stream::*::Cursor refactored and
    simplified
  * cursor => 0 option in process() function

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 17 Jun 2010 23:11:43 +0400

libstream-perl (0.7.1) unstable; urgency=low

  * process() function works when third parameter is undef

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 25 May 2010 23:17:11 +0400

libstream-perl (0.7.0) unstable; urgency=low

  * Stream::Base as a base class for ins, outs and filters
  * Stream::Filter is not an descendant of Stream::Out anymore
  * process() function understands chunk_size and commit_step options
  * Stream::Catalog::Plugin::File: saner error message, don't dump full
    content
  * Stream::Catalog: bind_in overrides local files

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 20 May 2010 20:13:31 +0400

libstream-perl (0.6.6) unstable; urgency=low

  * flushable filters cannot be attached to input streams
  * FilteredOut commit result reverted

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Sat, 27 Feb 2010 18:20:13 +0300

libstream-perl (0.6.5) unstable; urgency=low

  * commitable filters 

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Sat, 27 Feb 2010 16:18:04 +0300

libstream-perl (0.6.4) unstable; urgency=low

  * Stream::Filter: write method works in scalar context
  * many doc improvements
  * process(): chunk size defaults to 100 instead of 1000
