@@ -4,7 +4,6 @@ use strict;
 use warnings;
 use parent qw(Stream::Storage);
 
-print "package: ". __PACKAGE__ ."\n";
 sub stream {
     my $self = shift;
     my $name = shift;
